tests/specs/enum_member.txt
# mod.ts
export enum Enum {
  First,
  /** There is a JsDoc */
  Second,
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export enum Enum {
  | ^

# output.txt
Defined in file:///mod.ts:1:1

enum Enum

  First
  Second
    There is a JsDoc


# output.json
[
  {
    "kind": "enum",
    "name": "Enum",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "enumDef": {
      "members": [
        {
          "name": "First",
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 21
          }
        },
        {
          "name": "Second",
          "jsDoc": {
            "doc": "There is a JsDoc"
          },
          "location": {
            "filename": "file:///mod.ts",
            "line": 4,
            "col": 2,
            "byteIndex": 56
          }
        }
      ]
    }
  }
]
